working with multiple versions

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Jan 13 2022 09:03:08 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Jan 14 2022 05:31:22 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="61adcab3ab671b5d2ab2da33" data-wf-site="5fd05e808ba6609d12285571">
 <head>
   <meta charset="utf-8">
@@ -2579,106 +2579,6 @@
                           </div>
                         </div>
                       </div>
-                      <div class="data-category__h3">
-                        <div data-w-id="fd7050c2-b873-47df-95f2-2ba2c9710928" class="data-category__h3_trigger">
-                          <div class="truncate">Indicator</div>
-                          <div class="data-category__h3_loading"><img src="images/loading.gif" alt=""></div>
-                          <div class="data-category__h3_load-complete hidden">
-                            <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
-                                <path d="M0 0h24v24H0z" fill="none"></path>
-                                <path fill="currentColor" d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"></path>
-                              </svg></div>
-                          </div>
-                        </div>
-                        <div class="data-category__h3_content hidden">
-                          <div class="data-category__h3_wrapper">
-                            <div class="data-category__h4_line-v"></div>
-                            <a href="#" class="data-category__h4 w-inline-block">
-                              <div class="data-category__h4_line-h"></div>
-                              <div class="truncate">Subindicator</div>
-                              <div class="data-category__h4_loading hidden"><img src="images/loading.gif" alt=""></div>
-                              <div class="data-category__h4_load-complete hidden">
-                                <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
-                                    <path d="M0 0h24v24H0z" fill="none"></path>
-                                    <path fill="currentColor" d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"></path>
-                                  </svg></div>
-                              </div>
-                            </a>
-                            <a href="#" class="data-category__h4 w-inline-block">
-                              <div class="data-category__h4_line-h"></div>
-                              <div class="truncate">Subindicator</div>
-                              <div class="data-category__h4_loading"><img src="images/loading.gif" alt=""></div>
-                              <div class="data-category__h4_load-complete hidden">
-                                <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
-                                    <path d="M0 0h24v24H0z" fill="none"></path>
-                                    <path fill="currentColor" d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"></path>
-                                  </svg></div>
-                              </div>
-                            </a>
-                            <a href="#" class="data-category__h4 active w-inline-block">
-                              <div class="data-category__h4_line-h"></div>
-                              <div class="truncate">Subindicator</div>
-                              <div class="data-category__h4_loading hidden"><img src="images/loading.gif" alt=""></div>
-                              <div class="data-category__h4_load-complete">
-                                <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
-                                    <path d="M0 0h24v24H0z" fill="none"></path>
-                                    <path fill="currentColor" d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"></path>
-                                  </svg></div>
-                              </div>
-                            </a>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="data-category__h3">
-                        <div data-w-id="fd7050c2-b873-47df-95f2-2ba2c971094b" class="data-category__h3_trigger bg-primary-light active">
-                          <div class="truncate">Indicator</div>
-                          <div class="data-category__h3_loading hidden"><img src="images/loading.gif" alt=""></div>
-                          <div class="data-category__h3_load-complete">
-                            <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
-                                <path d="M0 0h24v24H0z" fill="none"></path>
-                                <path fill="currentColor" d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"></path>
-                              </svg></div>
-                          </div>
-                        </div>
-                        <div class="data-category__h3_content hidden">
-                          <div class="data-category__h3_wrapper">
-                            <div class="data-category__h4_line-v"></div>
-                            <a href="#" class="data-category__h4 w-inline-block">
-                              <div class="data-category__h4_line-h"></div>
-                              <div class="truncate">Subindicator</div>
-                              <div class="data-category__h4_loading hidden"><img src="images/loading.gif" alt=""></div>
-                              <div class="data-category__h4_load-complete hidden">
-                                <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
-                                    <path d="M0 0h24v24H0z" fill="none"></path>
-                                    <path fill="currentColor" d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"></path>
-                                  </svg></div>
-                              </div>
-                            </a>
-                            <a href="#" class="data-category__h4 w-inline-block">
-                              <div class="data-category__h4_line-h"></div>
-                              <div class="truncate">Subindicator</div>
-                              <div class="data-category__h4_loading"><img src="images/loading.gif" alt=""></div>
-                              <div class="data-category__h4_load-complete hidden">
-                                <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
-                                    <path d="M0 0h24v24H0z" fill="none"></path>
-                                    <path fill="currentColor" d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"></path>
-                                  </svg></div>
-                              </div>
-                            </a>
-                            <a href="#" class="data-category__h4 active w-inline-block">
-                              <div class="data-category__h4_line-h"></div>
-                              <div class="truncate">Subindicator</div>
-                              <div class="data-category__h4_loading hidden"><img src="images/loading.gif" alt=""></div>
-                              <div class="data-category__h4_load-complete">
-                                <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
-                                    <path d="M0 0h24v24H0z" fill="none"></path>
-                                    <path fill="currentColor" d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"></path>
-                                  </svg></div>
-                              </div>
-                            </a>
-                          </div>
-                        </div>
-                      </div>
                     </div>
                   </div>
                 </div>
@@ -3645,6 +3545,9 @@
 .mapping-options__filter.disabled {
 	pointer-events: none;
   }
+.data-category__h1_content--v2.is--closed {
+  max-height: 0px !important;
+}
 </style>
   </div>
   <div class="facility-print-styling w-embed">
