trivial templated title tag

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <html data-wf-page="61adcab3ab671b5d2ab2da33" data-wf-site="5fd05e808ba6609d12285571">
 <head>
   <meta charset="utf-8">
-  <title>Wazimap NG</title>
+  <title>{{title}}</title>
   <meta content="Discover the human stories in population data. Wazimap is a tool that helps map and visualise data used for population-based decision making." name="description">
   <meta content="Wazimap NG" property="og:title">
   <meta content="Discover the human stories in population data. Wazimap is a tool that helps map and visualise data used for population-based decision making." property="og:description">
@@ -3744,7 +3744,7 @@ setTimeout(function(){
 /*------------------------------------- Hide webflow items on deploy */
 .disabled {
   pointer-events: none;
-}  
+}
 /*------------------------------------- Hide scrollbar for Chrome, Safari and Opera */
 .no-scroll::-webkit-scrollbar {
   display: none;
@@ -3769,14 +3769,14 @@ setTimeout(function(){
   border-color:rgb(51, 51, 51);
   border-radius:2px;
 }
-/*-------- Custom slider checkbox */  
+/*-------- Custom slider checkbox */
 .switch {
   position: relative;
   display: inline-block;
   width: 32px;
   height: 20px;
 }
-.switch input { 
+.switch input {
   opacity: 0;
   width: 0;
   height: 0;
@@ -3818,7 +3818,7 @@ input:checked + .slider:before {
 .slider.round:before {
   border-radius: 50%;
 }
-/*-------- Fixing Chart Lines */  
+/*-------- Fixing Chart Lines */
 .bar-tooltip {
   z-index: 100;
 }
