--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  --><!--  Last Published: Mon May 16 2022 07:59:46 GMT+0000 (Coordinated Universal Time)  --><html data-wf-page="61adcab3ab671b5d2ab2da33" data-wf-site="5fd05e808ba6609d12285571"><head>
   <meta charset="utf-8">
-  <title>Wazimap NG</title>
+  <title>{{ title }}</title>
   <meta content="Discover the human stories in population data. Wazimap is a tool that helps map and visualise data used for population-based decision making." name="description">
-  <meta content="Wazimap NG" property="og:title">
+  <meta content="{{ title }}" property="og:title">
   <meta content="Discover the human stories in population data. Wazimap is a tool that helps map and visualise data used for population-based decision making." property="og:description">
   <meta content="https://uploads-ssl.webflow.com/5fd05e808ba6609d12285571/62665cb38d38bc8ca464b5bb_netgraph-1200-630%20(1).jpg" property="og:image">
-  <meta content="Wazimap NG" property="twitter:title">
+  <meta content="{{ title }}" property="twitter:title">
   <meta content="Discover the human stories in population data. Wazimap is a tool that helps map and visualise data used for population-based decision making." property="twitter:description">
   <meta content="https://uploads-ssl.webflow.com/5fd05e808ba6609d12285571/62665cb38d38bc8ca464b5bb_netgraph-1200-630%20(1).jpg" property="twitter:image">
   <meta property="og:type" content="website">
