--- a/src/index.html
+++ b/src/index.html
@@ -3677,7 +3677,7 @@
 </style>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5fd05e808ba6609d12285571" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-  <script src="js/webflow.js" type="text/javascript"></script>
+  <script src="js/webflow.js"  type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
   <style>
   #dev-tools {
@@ -3723,7 +3723,7 @@
   }
 });
 </script>
-  <script src="js/index.js"></script>
+  <script type="module" src="js/index.js"></script>
   <script>
 setTimeout(function(){
 		$('.w-webflow-badge').css({'display':'none !important'});
@@ -3744,7 +3744,7 @@ setTimeout(function(){
 /*------------------------------------- Hide webflow items on deploy */
 .disabled {
   pointer-events: none;
-}  
+}
 /*------------------------------------- Hide scrollbar for Chrome, Safari and Opera */
 .no-scroll::-webkit-scrollbar {
   display: none;
@@ -3769,14 +3769,14 @@ setTimeout(function(){
   border-color:rgb(51, 51, 51);
   border-radius:2px;
 }
-/*-------- Custom slider checkbox */  
+/*-------- Custom slider checkbox */
 .switch {
   position: relative;
   display: inline-block;
   width: 32px;
   height: 20px;
 }
-.switch input { 
+.switch input {
   opacity: 0;
   width: 0;
   height: 0;
@@ -3818,7 +3818,7 @@ input:checked + .slider:before {
 .slider.round:before {
   border-radius: 50%;
 }
-/*-------- Fixing Chart Lines */  
+/*-------- Fixing Chart Lines */
 .bar-tooltip {
   z-index: 100;
 }
