--- a/src/index.html
+++ b/src/index.html
@@ -638,7 +638,7 @@
                   </div>
                 </div>
               </div>
-              <p class="point-filters__no-data hidden">No filters available for the selected data.</p>
+              <p class="point-filters__no-data hidden i18n" data-i18n="No filters available for the selected data.">No filters available for the selected data.</p>
               <div class="point-filters__labels hidden">
                 <div class="point-filters__filter">
                   <div class="point-filters__filter-label">
@@ -1149,7 +1149,7 @@
           <div data-i18n="Point Mapper" class="point-data__header_title i18n">Point Mapper </div>
         </div>
         <div class="point-mapper-content__description">
-          <div>Select the category, or specific type of point data you would like to overlay onto the map.<strong><br></strong></div>
+          <div class="i18n" data-i18n="Select the category, or specific type of point data you would like to overlay onto the map.">Select the category, or specific type of point data you would like to overlay onto the map.<strong><br></strong></div>
         </div>
         <div class="point-mapper-content__loading">
           <div class="loading">
@@ -3741,7 +3741,7 @@ setTimeout(function(){
 /*------------------------------------- Hide webflow items on deploy */
 .disabled {
   pointer-events: none;
-}
+}  
 /*------------------------------------- Hide scrollbar for Chrome, Safari and Opera */
 .no-scroll::-webkit-scrollbar {
   display: none;
@@ -3766,14 +3766,14 @@ setTimeout(function(){
   border-color:rgb(51, 51, 51);
   border-radius:2px;
 }
-/*-------- Custom slider checkbox */
+/*-------- Custom slider checkbox */  
 .switch {
   position: relative;
   display: inline-block;
   width: 32px;
   height: 20px;
 }
-.switch input {
+.switch input { 
   opacity: 0;
   width: 0;
   height: 0;
@@ -3815,7 +3815,7 @@ input:checked + .slider:before {
 .slider.round:before {
   border-radius: 50%;
 }
-/*-------- Fixing Chart Lines */
+/*-------- Fixing Chart Lines */  
 .bar-tooltip {
   z-index: 100;
 }
