adding i18n attributes in import.js

--- a/src/index.html
+++ b/src/index.html
@@ -1000,7 +1000,7 @@
                     </svg></div>
                 </div>
                 <div class="no-data__text">
-                  <div>No facilities for this location</div>
+                  <div class="i18n" data-i18n="No facilities for this location">No facilities for this location</div>
                 </div>
               </div>
             </div>
@@ -1125,7 +1125,7 @@
               <path fill="#34a853" d="M88.63,117.37c15.39-24.07,33.34-35,33.34-62.98c0-7.67-1.88-14.9-5.19-21.26l-61.55,73.18   c2.61,3.42,5.24,7.06,7.81,11.07c9.36,14.46,6.76,23.13,12.8,23.13C81.86,140.51,79.27,131.83,88.63,117.37"></path>
             </svg></div>
         </div>
-        <div class="facility-info__google-map-text">View location in Google Maps</div>
+        <div class="facility-info__google-map-text i18n" data-i18n="View location in Google Maps">View location in Google Maps</div>
       </a>
       <div class="facility-info__content">
         <div class="facility-info__items">
