adding i18n attributes in import.js

--- a/src/index.html
+++ b/src/index.html
@@ -1168,7 +1168,7 @@
                 </svg></div>
             </div>
             <div class="no-data__text">
-              <div>No points available for this location</div>
+              <div class="i18n" data-i18n="No points available for this location">No points available for this location</div>
             </div>
           </div>
         </div>
