--- a/src/index.html
+++ b/src/index.html
@@ -3720,7 +3720,7 @@
   }
 });
 </script>
-  <script src="js/index.js"></script>
+  
   <script>
 setTimeout(function(){
 		$('.w-webflow-badge').css({'display':'none !important'});
@@ -3741,7 +3741,7 @@ setTimeout(function(){
 /*------------------------------------- Hide webflow items on deploy */
 .disabled {
   pointer-events: none;
-}
+}  
 /*------------------------------------- Hide scrollbar for Chrome, Safari and Opera */
 .no-scroll::-webkit-scrollbar {
   display: none;
@@ -3766,14 +3766,14 @@ setTimeout(function(){
   border-color:rgb(51, 51, 51);
   border-radius:2px;
 }
-/*-------- Custom slider checkbox */
+/*-------- Custom slider checkbox */  
 .switch {
   position: relative;
   display: inline-block;
   width: 32px;
   height: 20px;
 }
-.switch input {
+.switch input { 
   opacity: 0;
   width: 0;
   height: 0;
@@ -3815,7 +3815,7 @@ input:checked + .slider:before {
 .slider.round:before {
   border-radius: 50%;
 }
-/*-------- Fixing Chart Lines */
+/*-------- Fixing Chart Lines */  
 .bar-tooltip {
   z-index: 100;
 }
@@ -3824,4 +3824,4 @@ line, .grid {
 }
 </style>
 
-</body></html>
+<script src="js/index.js"></script></body></html>
