--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/wazimap-ng.webflow.css" rel="stylesheet" type="text/css">
-  <style>@media (max-width:479px) {html.w-mod-js:not(.w-mod-ix) [data-w-id="daa39c00-4f7f-ebc9-ea04-511e668d9825"] {-webkit-transform:translate3d(0PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);}html.w-mod-js:not(.w-mod-ix) [data-w-id="5c312e8d-57e5-7c96-7f71-b6b8b8f96a50"] {width:44PX;}html.w-mod-js:not(.w-mod-ix) [data-w-id="67e8fb10-ba62-0c25-f511-60f23abff4b7"] {-webkit-transform:translate3d(0PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0DEG) skew(0, 0);-moz-transform:translate3d(0PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0DEG) skew(0, 0);-ms-transform:translate3d(0PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0DEG) skew(0, 0);transform:translate3d(0PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0DEG) skew(0, 0);}}</style>
+
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
   <script type="text/javascript">WebFont.load({  google: {    families: ["Inconsolata:400,700","Roboto:300,regular,italic,500,500italic,700,900"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
@@ -3536,175 +3536,13 @@
     </div>
   </div>
   <div class="custom-html-css w-embed">
-    <style>
-.truncate, .profile-indicator__table_cell {
-	width: 100%;
-	white-space: nowrap;
-	overflow: hidden;
-	text-overflow: ellipsis;
-	}
-.mapping-options__filter.disabled {
-	pointer-events: none;
-  }
-.data-category__h1_content--v2.is--closed {
-  max-height: 0px !important;
-}
-</style>
   </div>
   <div class="facility-print-styling w-embed">
-    <style>
-/*
-.nav,.map,.rich-data,.panel-toggles,.data-mapper,.point-mapper,.tab-notice,.facility-info__close,.facility-info__print {
-	display: none !important;
-}
-.facility-info {
-	display: flex;
-	position: fixed;
-  width: 100vw !important;
-  height: 100vh !important;
-  max-width: none;
-  max-height: none;
-  left: 0%;
-  right: 0%;
-  top: 0%;
-  Bottom: 0%;
-  z-index: 100000;
-}
-*/
-</style>
-  </div>
-  <div class="print-styling w-embed">
-    <style>
-@media print {
-/*--padding adjustments--*/
-	.location__description, .location__sources .profile-indicator {
-  	padding-bottom: 0px;
-  }
-  .section {
-  	padding-bottom: 20px;
-  }
-  .sub-category-header__key-metrics {
-  	padding-bottom: 12px;
-  }
-  .profile-indicator__header {
-  	margin-bottom: 0px;
-  }
-	.sub-category-header__title {
-  	margin-bottom: 12px;
-  }
-  .profile-indicator__chart {
-  	margin-top: 0px;
-  }
-/*--hide unwanted elements in print--*/
-  .nav, .rich-data__print, .login-modal, .category-header__link, .location__header, .profile-indicator__options, .sticky-header, .tutorial-modal, .styles, .map, .point-mapper, .data-mapper, .panel-toggles, .rich-data-nav, .rich-data-bumper, .rich-data-toggles {
-    display: none;
-  }
-/*--display-block--*/
-  body, .main, .rich-data, .rich-data-content, .rich-data-content .section, .profile-indicator{
-    float: none !important;
-    display: block !important;
-  }
-/*--avoid page breaks--*/
-  .page-break-before {
-    break-before: page;
-  }
-	.sub-category-header {
- 		break-inside: avoid;
-	}
-	.profile-indicator {
-  	break-inside: avoid;
-  }
-/*--hide interaction buttons--*/
-.location-facility__list_item {
-	grid-template-columns: 4fr 1fr .0;
-  }
-.location-facility__item_download {
-	display: none;
-  }
-/*--adjust rich-data panel to fill page--*/
-	.rich-data, .rich-data-content {
-  	max-width: 100%;
-    width: 100%;
-	}
-  .rich-data-content {
-  	padding: 0px;
-    filter: grayscale(100%);
-  }
-/*--adjust text size--*/
-  .body {
- 	 font-size: 12px !important;
-  }
-/*--adjust charts--*/
-.bar-chart__row_bar {
-	background-color: #000 !important;
-  }
-@media print {
-  .page-break-before {
-    break-before: page;
-  }
-  body, .main, .rich-data, .rich-data-content, .rich-data-content .section, .profile-indicator{
-    float: none !important;
-    display: block !important;
-  }
-  .rich-data__print, .tab-notice{
-    display: none;
-  }
-  .rich-data[style*="display: none;"]{
-    display: none !important;
-  }
-  .facility-info[style*="display: none;"]{
-    display: none !important;
-  }
-  .facility-info[style*="display: flex;"]{
-    display: inline-table;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    background-color: #fff;
-    max-height: 100%;
-    max-width: 100%;
-  }
-  .facility-info__view-google-map, .facility-info__print, .facility-info__close{
-    display: none;
-  }
-}
-}
-</style>
+
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5fd05e808ba6609d12285571" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
-  <style>
-  #dev-tools {
-    z-index:200;
-  }
-  #map-download-title {
-   position: fixed;
-   top: 80px;
-   z-index: 998;
-   width: 100%;
-   text-align: center;
-   font-size: 30px;
-   font-weight: bold;
-   color: white;
- }
-  #map-download-legend {
-   position: absolute;
-   bottom: 50px;
-   z-index: 998;
-   width: 100%;
-   display: flex;
-   justify-content: center;
- }
-  #map-download-legend .map-options__legend_wrap {
-   background: white;
-   padding: 5px;
-   height: 29px;
-   max-width: 397px;
- }
-</style> <!--  Used for the autocomplete search box  -->
   <link href="https://code.jquery.com/ui/1.12.0/themes/smoothness/jquery-ui.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css">
   <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"></script>
@@ -3720,108 +3558,11 @@
   }
 });
 </script>
-  
+
   <script>
 setTimeout(function(){
 		$('.w-webflow-badge').css({'display':'none !important'});
 }, 2000);
 </script>
-  <style>
-/*------------------------------------- Truncation */
-.truncate {
-	width: 100%;
-	white-space: nowrap;
-	overflow: hidden;
-	text-overflow: ellipsis;
-	}
-/*------------------------------------- Hidden important */
-.hidden {
-	display: none !important;
-  }
-/*------------------------------------- Hide webflow items on deploy */
-.disabled {
-  pointer-events: none;
-}  
-/*------------------------------------- Hide scrollbar for Chrome, Safari and Opera */
-.no-scroll::-webkit-scrollbar {
-  display: none;
-}
-/*------------------------------------- Hide scrollbar for IE and Edge */
-.no-scroll {
-  -ms-overflow-style: none;
-}
-/*-------- Narrow scroll bar */
-/*width*/
-.narrow-scroll::-webkit-scrollbar {
-  width:4px;
-}
-/*track*/
-.narrow-scroll::-webkit-scrollbar-track {
-  background:rgba(255, 255, 255, 0);
-  border-color:rgb(255, 255, 255);
-}
-/*thumb*/
-.narrow-scroll::-webkit-scrollbar-thumb {
-  background:rgb(98, 98, 98);
-  border-color:rgb(51, 51, 51);
-  border-radius:2px;
-}
-/*-------- Custom slider checkbox */  
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 32px;
-  height: 20px;
-}
-.switch input { 
-  opacity: 0;
-  width: 0;
-  height: 0;
-}
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #00000030;
-  -webkit-transition: .1s;
-  transition: .1s;
-}
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 12px;
-  width: 12px;
-  left: 4px;
-  bottom: 4px;
-  background-color: white;
-  -webkit-transition: .1s;
-  transition: .1s;
-}
-input:checked + .slider {
-  background-color: #3c3c3c;
-}
-input:checked + .slider:before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(12px);
-  transform: translateX(12px);
-}
-/* Rounded sliders */
-.slider.round {
-  border-radius: 34px;
-}
-.slider.round:before {
-  border-radius: 50%;
-}
-/*-------- Fixing Chart Lines */  
-.bar-tooltip {
-  z-index: 100;
-}
-line, .grid {
-  stroke: #999;
-}
-</style>
 
-<script src="js/index.js"></script></body></html>
+<script src="js/index.js" type="module"></script></body></html>
