fixed tooltip bug

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,9 @@
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
   <script src="https://kit.fontawesome.com/95e41092af.js" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="custom-css/mapchip.scss"><link rel="stylesheet" href="custom-css/popup.scss"></head>
+  <link rel="stylesheet" href="custom-css/mapchip.scss">
+  <link rel="stylesheet" href="custom-css/popup.scss">
+</head>
   <style>
   .truncate, .profile-indicator__table_cell {
       width: 100%;
