--- a/src/tabular-comparison.html
+++ b/src/tabular-comparison.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+    <link rel="stylesheet" href="custom-css/tabular-comparison.scss">
 </head>
 <body>
 <div id="root"></div>
-<script src="js/tabular-comparison/index.js"></script>
+<script src="js/tabular-comparison/index.js" type="module"></script>
 </body>
 </html>
