--- a/src/index.html
+++ b/src/index.html
@@ -22,9 +22,7 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
-  <script src="https://kit.fontawesome.com/95e41092af.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="custom-css/mapchip.scss">
-  <link rel="stylesheet" href="custom-css/popup.scss">
+  <script defer="" src="https://kit.fontawesome.com/95e41092af.js" crossorigin="anonymous"></script>
   <style>
   .truncate, .profile-indicator__table_cell {
       width: 100%;
@@ -360,7 +358,7 @@ line, .grid {
   stroke: #999;
 }
 </style>
-</head>
+<link rel="stylesheet" href="custom-css/mapchip.scss"><link rel="stylesheet" href="custom-css/popup.scss"></head>
 <body class="body no-scroll">
   <div class="login-modal hidden">
     <div class="login">
@@ -3898,4 +3896,4 @@ setTimeout(function(){
 }, 2000);
 </script>
 
-<script src="js/index.js"></script></body></html>
+<script src="js/index.js"></script><a style="display:none" href="/tabular-comparison.html"></a></body></html>
