fixed the issue breaking the site when the selected indicator does not exist for a geo

--- a/src/tabular-comparison.html
+++ b/src/tabular-comparison.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Tabular Comparison</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
 </head>
 <body>
