--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  --><!--  Last Published: Mon Oct 03 2022 08:12:24 GMT+0000 (Coordinated Universal Time)  --><html data-wf-page="61adcab3ab671b5d2ab2da33" data-wf-site="5fd05e808ba6609d12285571"><head>
+<!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  --><!--  Last Published: Tue Nov 22 2022 12:17:41 GMT+0000 (Coordinated Universal Time)  --><html data-wf-page="61adcab3ab671b5d2ab2da33" data-wf-site="5fd05e808ba6609d12285571"><head>
   <meta charset="utf-8">
   <title>Wazimap NG</title>
   <meta content="Discover the human stories in population data. Wazimap is a tool that helps map and visualise data used for population-based decision making." name="description">
@@ -1244,6 +1244,12 @@ line, .grid {
           </svg></div>
       </div>
       <div id="main-map" class="map-area"></div>
+      <div class="powered-by-wazimap_wrapper is--map">
+        <div class="powered-by-wazimap">
+          <div class="powered-by-wazimap_text">Powered by:</div>
+          <a href="https://wazimap-ng.com/" target="_blank" class="powered-by-wazimap_logo-wrapper w-inline-block"><img src="images/powered-by-wazimap-logo.svg" loading="lazy" alt="" class="powered-by-wazimap_logo"></a>
+        </div>
+      </div>
     </div>
     <div class="rich-data">
       <div data-w-id="daa39c00-4f7f-ebc9-ea04-511e668d9825" class="rich-data-nav">
@@ -1395,6 +1401,12 @@ line, .grid {
         <div class="section">
           <div class="section-link"></div>
         </div>
+        <div class="powered-by-wazimap_wrapper is--rich-data">
+          <div class="powered-by-wazimap">
+            <div class="powered-by-wazimap_text">Powered by:</div>
+            <a href="https://wazimap-ng.com/" target="_blank" class="powered-by-wazimap_logo-wrapper w-inline-block"><img src="images/powered-by-wazimap-logo.svg" loading="lazy" alt="" class="powered-by-wazimap_logo"></a>
+          </div>
+        </div>
       </div>
       <div class="rich-data-toggles">
         <div data-w-id="1b738c3c-f509-9ebc-f15d-d66894a02164" class="panel-toggle rich-data-panel__close text-primary">
@@ -1542,6 +1554,12 @@ line, .grid {
           </div>
         </div>
       </div>
+      <div class="powered-by-wazimap_wrapper">
+        <div class="powered-by-wazimap">
+          <div class="powered-by-wazimap_text">Powered by:</div>
+          <a href="https://wazimap-ng.com/" target="_blank" class="powered-by-wazimap_logo-wrapper w-inline-block"><img src="images/powered-by-wazimap-logo.svg" loading="lazy" alt="" class="powered-by-wazimap_logo"></a>
+        </div>
+      </div>
     </div>
     <div class="data-mapper">
       <div class="data-mapper-content narrow-scroll">
@@ -1607,6 +1625,12 @@ line, .grid {
             <div class="panel-toggle__tooltip_text">Data Mapper</div>
             <div class="panel-toggle__tooltip_notch"></div>
           </div>
+        </div>
+      </div>
+      <div class="powered-by-wazimap_wrapper is--map">
+        <div class="powered-by-wazimap">
+          <div class="powered-by-wazimap_text">Powered by:</div>
+          <a href="https://wazimap-ng.com/" target="_blank" class="powered-by-wazimap_logo-wrapper w-inline-block"><img src="images/powered-by-wazimap-logo.svg" loading="lazy" alt="" class="powered-by-wazimap_logo"></a>
         </div>
       </div>
     </div>
@@ -1913,6 +1937,7 @@ line, .grid {
           </div>
         </div>
         <div class="styles__area_block">
+          <div class="div-block-4"></div>
           <div class="point-mapper__h1">
             <div data-w-id="bf6a46d9-86a7-67f0-4a2e-794e9e22a39c" class="point-mapper__h1_trigger theme-3 active">
               <div class="point-data__h1_icon">
