--- a/src/index.html
+++ b/src/index.html
@@ -1646,7 +1646,7 @@ line, .grid {
           </svg></div>
       </div>
     </div>
-  </div>
+  <div class="map-watermark-wrapper"></div></div>
   <div class="styles hidden">
     <div class="styles__wrapper">
       <div class="styles__section">
