--- a/src/index.html
+++ b/src/index.html
@@ -1643,7 +1643,7 @@ line, .grid {
           </svg></div>
       </div>
     </div>
-  <div class="map-watermark-wrapper"></div></div>
+  <div class="map-watermark-wrapper"></div><div class="right-panel-toggles"><div class="my-view-toggle"></div></div></div>
   <div class="styles hidden">
     <div class="styles__wrapper">
       <div class="styles__section">
