--- a/src/app-shell.html
+++ b/src/app-shell.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  --><!--  Last Published: Thu Dec 08 2022 07:06:18 GMT+0000 (Coordinated Universal Time)  --><html data-wf-page="63918cd6b8bb21ac2dd9ea49" data-wf-site="5fd05e808ba6609d12285571"><head>
+<!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  --><!--  Last Published: Mon Dec 05 2022 08:09:56 GMT+0000 (Coordinated Universal Time)  --><html data-wf-page="6389933248095b389e0361c1" data-wf-site="5fd05e808ba6609d12285571"><head>
   <meta charset="utf-8">
-  <title>Wazimap NG</title>
+  <title>{{ title }}</title>
   <meta content="Discover the human stories in population data. Wazimap is a tool that helps map and visualise data used for population-based decision making." name="description">
-  <meta content="Wazimap NG" property="og:title">
+  <meta content="{{ title }}" property="og:title">
   <meta content="Discover the human stories in population data. Wazimap is a tool that helps map and visualise data used for population-based decision making." property="og:description">
   <meta content="https://uploads-ssl.webflow.com/5fd05e808ba6609d12285571/62665cb38d38bc8ca464b5bb_netgraph-1200-630%20(1).jpg" property="og:image">
-  <meta content="Wazimap NG" property="twitter:title">
+  <meta content="{{ title }}" property="twitter:title">
   <meta content="Discover the human stories in population data. Wazimap is a tool that helps map and visualise data used for population-based decision making." property="twitter:description">
   <meta content="https://uploads-ssl.webflow.com/5fd05e808ba6609d12285571/62665cb38d38bc8ca464b5bb_netgraph-1200-630%20(1).jpg" property="twitter:image">
   <meta property="og:type" content="website">
@@ -362,25 +362,25 @@ line, .grid {
 <body class="body no-scroll">
   <div class="login-modal hidden">
     <div class="login">
-      <div id="w-node-_8370c3c3-dd27-5ba4-e185-11a67e6ccd44-2dd9ea49" class="login__title">
+      <div id="w-node-_8370c3c3-dd27-5ba4-e185-11a67e6ccd44-9e0361c1" class="login__title">
         <h1 class="clear">Login Required</h1>
       </div>
-      <div id="w-node-_138f8096-55b2-2cf7-756a-31f6ef2aede4-2dd9ea49" data-w-id="138f8096-55b2-2cf7-756a-31f6ef2aede4" class="login__close">
+      <div id="w-node-_138f8096-55b2-2cf7-756a-31f6ef2aede4-9e0361c1" data-w-id="138f8096-55b2-2cf7-756a-31f6ef2aede4" class="login__close">
         <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
             <path d="M0 0h24v24H0z" fill="none"></path>
             <path fill="currentColor" d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"></path>
           </svg></div>
       </div>
-      <div id="w-node-_2a3c695e-4c47-ff4f-0294-09c3cf7a9fe2-2dd9ea49" class="login__description">
+      <div id="w-node-_2a3c695e-4c47-ff4f-0294-09c3cf7a9fe2-9e0361c1" class="login__description">
         <div>This is private instance of Wazimap and requires you to be an authorized user to access it.</div>
       </div>
-      <div id="w-node-_5c3e6bec-baae-1fe9-3f2a-222d0aaebade-2dd9ea49" class="login__form">
+      <div id="w-node-_5c3e6bec-baae-1fe9-3f2a-222d0aaebade-9e0361c1" class="login__form">
         <div class="form-block w-form">
           <form id="wf-form-Login-Form" name="wf-form-Login-Form" data-name="Login Form" method="get"><label for="Email">Username</label><input type="email" class="text-field w-input" maxlength="256" name="Email" data-name="Email" placeholder="" id="Email" required=""><label for="Password">Password</label><input type="password" class="text-field w-input" maxlength="256" name="Password" data-name="Password" placeholder="" id="Password" required="">
-            <div class="login-form__actions"><label id="w-node-_80c1d4e4-3db7-9834-435b-fefcf113a3cc-2dd9ea49" class="w-checkbox login-form__checkbox">
+            <div class="login-form__actions"><label id="w-node-_80c1d4e4-3db7-9834-435b-fefcf113a3cc-9e0361c1" class="w-checkbox login-form__checkbox">
                 <div class="w-checkbox-input w-checkbox-input--inputType-custom custom-checkbox"></div><input type="checkbox" id="checkbox-2" name="checkbox-2" data-name="Checkbox 2" style="opacity:0;position:absolute;z-index:-1"><span class="checkbox-label w-form-label" for="checkbox-2">Remember me</span>
-              </label><input type="submit" value="Login" data-wait="Please wait..." id="w-node-_2c610f29-c711-7689-3c43-fceb1157e41b-2dd9ea49" class="button w-button">
-              <a id="w-node-_4cdd59b0-8837-5a43-7847-25fe1e234621-2dd9ea49" href="#">Forgot your password?</a>
+              </label><input type="submit" value="Login" data-wait="Please wait..." id="w-node-_2c610f29-c711-7689-3c43-fceb1157e41b-9e0361c1" class="button w-button">
+              <a id="w-node-_4cdd59b0-8837-5a43-7847-25fe1e234621-9e0361c1" href="#">Forgot your password?</a>
             </div>
           </form>
           <div class="w-form-done">
@@ -406,7 +406,7 @@ line, .grid {
             </svg></div>
         </div>
       </div>
-      <div data-delay="4000" data-animation="cross" class="tutorial__slider w-slider" data-autoplay="false" data-easing="ease" data-hide-arrows="false" data-disable-swipe="false" data-autoplay-limit="0" data-nav-spacing="4" data-duration="500" data-infinite="false" id="w-node-e1033b14-ea6f-0f0d-1fc3-909d66137000-2dd9ea49">
+      <div data-delay="4000" data-animation="cross" class="tutorial__slider w-slider" data-autoplay="false" data-easing="ease" data-hide-arrows="false" data-disable-swipe="false" data-autoplay-limit="0" data-nav-spacing="4" data-duration="500" data-infinite="false" id="w-node-e1033b14-ea6f-0f0d-1fc3-909d66137000-9e0361c1">
         <div class="mask w-slider-mask">
           <div class="slide w-slide">
             <div class="tutorial__slide-content">
@@ -538,14 +538,14 @@ line, .grid {
           <p><strong>Are you sure you would like to proceed?</strong></p>
         </div>
       </div>
-      <div id="w-node-d59f773f-aa49-25bd-47c6-0df91218fa5c-2dd9ea49" class="warning__actions">
-        <div id="w-node-d59f773f-aa49-25bd-47c6-0df91218fa5d-2dd9ea49" class="dismiss__no-show">
+      <div id="w-node-d59f773f-aa49-25bd-47c6-0df91218fa5c-9e0361c1" class="warning__actions">
+        <div id="w-node-d59f773f-aa49-25bd-47c6-0df91218fa5d-9e0361c1" class="dismiss__no-show">
           <div class="html-embed w-embed">
             <p><input type="checkbox" class="custom-checkbox" name="dismiss__no-show" id="no-show"></p>
           </div>
           <div class="checkbox-label">Don't show again</div>
         </div>
-        <div id="w-node-d59f773f-aa49-25bd-47c6-0df91218fa61-2dd9ea49" class="button-wrapper">
+        <div id="w-node-d59f773f-aa49-25bd-47c6-0df91218fa61-9e0361c1" class="button-wrapper">
           <a href="#" class="button button--margin-right button--grey w-button">Cancel</a>
           <a id="warning-proceed" href="#" class="button button--margin-right w-button">Proceed</a>
         </div>
@@ -565,10 +565,10 @@ line, .grid {
       <div data-w-id="66ee4f1f-99f3-8310-c69c-b5d00bdac74c" style="opacity:1;display:none" class="nav__search-deselect"></div>
       <div class="nav__shadow"></div>
       <div class="nav__content">
-        <a id="w-node-_2331a044-806f-907c-13ce-926b3e9c855a-2dd9ea49" href="#" class="nav__content_title w-inline-block">
+        <a id="w-node-_2331a044-806f-907c-13ce-926b3e9c855a-9e0361c1" href="#" class="nav__content_title w-inline-block">
           <div class="nav__profile-logo"><img src="https://d3e54v103j8qbb.cloudfront.net/plugins/Basic/assets/placeholder.60f9b1840c.svg" alt="" class="profile-logo"></div>
         </a>
-        <div id="w-node-_2331a044-806f-907c-13ce-926b3e9c8568-2dd9ea49" class="nav__content_search">
+        <div id="w-node-_2331a044-806f-907c-13ce-926b3e9c8568-9e0361c1" class="nav__content_search">
           <div class="nav__search_input">
             <div data-w-id="2331a044-806f-907c-13ce-926b3e9c8576" class="search__input w-form">
               <form id="email-form" name="email-form" data-name="Email Form" method="post" class="form"><input type="text" class="location__search_input w-input i18n-placeholder" autocomplete="off" maxlength="256" name="Location" data-name="Location" placeholder="Search for a location..." id="Location" data-i18n="Search for a location...">
@@ -615,7 +615,7 @@ line, .grid {
             </div>
           </div>
         </div>
-        <div id="w-node-_2331a044-806f-907c-13ce-926b3e9c85a0-2dd9ea49" class="nav__content_menu">
+        <div id="w-node-_2331a044-806f-907c-13ce-926b3e9c85a0-9e0361c1" class="nav__content_menu">
           <div class="nav__link-wrap">
             <a data-w-id="2331a044-806f-907c-13ce-926b3e9c8565" href="#" class="nav__link tutorial__open bg-primary w-inline-block">
               <div class="nav__link_icon">
@@ -1574,7 +1574,10 @@ line, .grid {
           </div>
           <div>The Data Mapper cannot be used with this location as it doesn't contain any sub-areas which can be used for mapping</div>
         </div>
-        <div class="data-mapper-content__list"></div>
+        <div class="data-mapper-content__list-wrapper">
+          <div class="data-mapper-content__list"></div>
+          <div class="data-mapper-content__rich-data-panel-link"></div>
+        </div>
       </div>
       <div class="data-mapper-toggles">
         <div data-w-id="82de420b-3451-8ea3-a5a4-f892b059998e" class="panel-toggle rich-data-panel__open">
@@ -3021,7 +3024,7 @@ line, .grid {
                         <div class="location-facility__item_value">
                           <div>...</div>
                         </div>
-                        <div id="w-node-_91faa97b-05e0-ee56-35d9-a4312e607bde-2dd9ea49" class="location-facility__item_download">
+                        <div id="w-node-_91faa97b-05e0-ee56-35d9-a4312e607bde-9e0361c1" class="location-facility__item_download">
                           <div class="svg-icon small w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                               <path d="M0 0h24v24H0z" fill="none"></path>
                               <path fill="currentColor" d="M19,9h-4V3H9v6H5l7,7L19,9z M5,18v2h14v-2H5z"></path>
@@ -3035,7 +3038,7 @@ line, .grid {
                         <div class="location-facility__item_value">
                           <div>...</div>
                         </div>
-                        <div id="w-node-_91faa97b-05e0-ee56-35d9-a4312e607be7-2dd9ea49" class="location-facility__item_download">
+                        <div id="w-node-_91faa97b-05e0-ee56-35d9-a4312e607be7-9e0361c1" class="location-facility__item_download">
                           <div class="svg-icon small w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                               <path d="M0 0h24v24H0z" fill="none"></path>
                               <path fill="currentColor" d="M19,9h-4V3H9v6H5l7,7L19,9z M5,18v2h14v-2H5z"></path>
@@ -3088,7 +3091,7 @@ line, .grid {
             <div class="search__list-item_location-parent">
               <div class="truncate">Loading...</div>
             </div>
-            <div id="w-node-_0cc195d0-8237-0a5c-88c5-6bd36b98a8c8-2dd9ea49" class="search__list-item_location-type">
+            <div id="w-node-_0cc195d0-8237-0a5c-88c5-6bd36b98a8c8-9e0361c1" class="search__list-item_location-type">
               <div class="truncate">Loading...</div>
             </div>
           </div>
@@ -3101,7 +3104,7 @@ line, .grid {
             <div class="search__list-item_location-parent">
               <div class="truncate">Loading...</div>
             </div>
-            <div id="w-node-_8d9eb87a-805a-ef6a-0ef3-bca9e2f0f20f-2dd9ea49" class="search__list-item_location-type">
+            <div id="w-node-_8d9eb87a-805a-ef6a-0ef3-bca9e2f0f20f-9e0361c1" class="search__list-item_location-type">
               <div class="truncate">Loading...</div>
             </div>
           </div>
