Upgrade to Parcel 2

--- a/src/index.html
+++ b/src/index.html
@@ -3865,4 +3865,4 @@ setTimeout(function(){
 }, 2000);
 </script>
 
-<script src="js/index.js"></script><a style="display:none" href="/tabular-comparison.html"></a></body></html>
+<script src="js/index.js" type="module"></script><a style="display:none" href="tabular-comparison.html"></a></body></html>
