--- a/src/401.html
+++ b/src/401.html
@@ -18,7 +18,7 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
-  <script defer="" src="https://kit.fontawesome.com/95e41092af.js" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/c900808f7f.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <div class="utility-page-wrap">
